--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="result">Your Results:</div>
       <div class="final-score">0</div>
       <ul class="rank-list">
-        <li class="rank-item">
+        <!-- <li class="rank-item">
           <span class="rank-degree first">1</span>
           <span class="rank-score">2</span>
           <span class="rank-time">2020.06.15 20:49:06</span>
@@ -32,11 +32,15 @@
           <span class="rank-degree third">1</span>
           <span class="rank-score">25</span>
           <span class="rank-time">2020.06.15 20:49:06</span>
-        </li>
+        </li> -->
       </ul>
       <div class="restart">重新开始</div>
     </div>
+    <!-- <div class="pipe pipe-up"></div>
+    <div class="pipe pipe-bottom"></div> -->
   </div>
+  <script src="./utils.js"></script>
+  <!-- 在index中使用了utils -->
   <script src="./index.js"></script>
   <script>
     // 外地传一个id='game'进去，防止修改主页面的dom节点--game
